# store-email-ops-practice

./: .dockerignore  .gitignore  Dockerfile.api  KEY_LEARNINGS.md  README.md  pyproject.toml  pyrightconfig.json  run.py
.github/workflows/: tests.yml
app/: __init__.py  db.py  models.py  worker.py
app/api/: routes.py
app/core/: config.py  errors.py
app/messaging/: factory.py  kafka_bus.py  memory_bus.py  sqs_bus.py
app/schemas/: campaigns.py
app/services/: campaign_service.py  email_sender.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
lambda/email_sender/: README.md  handler.py
tests/: test_app.py  test_campaign_sending_bdd.py
tests/features/: campaign_sending.feature
